# serializer version: 1
# name: test_add_device_tag
  Tag(id=1, key='tag_1', value='value_1')
# ---
# name: test_add_device_variable
  EnvironmentVariable(id=1, name='VARIABLE_1', value='1234567890', created_at=datetime.datetime(2024, 1, 1, 0, 0, tzinfo=datetime.timezone.utc))
# ---
# name: test_get_device[device_id-1-/v7/device(1)]
  Device(id=1, name='Device_1', status='Idle', uuid='00000000000000000000000000000001', is_online=True, is_web_accessible=True, is_undervolted=False, latitude=0.0, longitude=0.0)
# ---
# name: test_get_device[device_uuid-test-uuid-/v7/device(uuid='test-uuid')]
  Device(id=1, name='Device_1', status='Idle', uuid='00000000000000000000000000000001', is_online=True, is_web_accessible=True, is_undervolted=False, latitude=0.0, longitude=0.0)
# ---
# name: test_get_device_tag
  Tag(id=1, key='tag_1', value='value_1')
# ---
# name: test_get_device_tags[device_id-1]
  list([
    Tag(id=1, key='tag_1', value='value_1'),
    Tag(id=2, key='tag_2', value='value_2'),
    Tag(id=3, key='tag_3', value='value_3'),
  ])
# ---
# name: test_get_device_tags[device_uuid-test-uuid]
  list([
    Tag(id=1, key='tag_1', value='value_1'),
    Tag(id=2, key='tag_2', value='value_2'),
    Tag(id=3, key='tag_3', value='value_3'),
  ])
# ---
# name: test_get_device_variable
  EnvironmentVariable(id=1, name='VARIABLE_1', value='1234567890', created_at=datetime.datetime(2024, 1, 1, 0, 0, tzinfo=datetime.timezone.utc))
# ---
# name: test_get_device_variables[device_id-1]
  list([
    EnvironmentVariable(id=1, name='VARIABLE_1', value='1234567890', created_at=datetime.datetime(2024, 1, 1, 0, 0, tzinfo=datetime.timezone.utc)),
    EnvironmentVariable(id=2, name='VARIABLE_2', value='TEST_1', created_at=datetime.datetime(2024, 1, 2, 0, 0, tzinfo=datetime.timezone.utc)),
  ])
# ---
# name: test_get_device_variables[device_uuid-test-uuid]
  list([
    EnvironmentVariable(id=1, name='VARIABLE_1', value='1234567890', created_at=datetime.datetime(2024, 1, 1, 0, 0, tzinfo=datetime.timezone.utc)),
    EnvironmentVariable(id=2, name='VARIABLE_2', value='TEST_1', created_at=datetime.datetime(2024, 1, 2, 0, 0, tzinfo=datetime.timezone.utc)),
  ])
# ---
